Alignment fixes

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,10 +19,16 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    background-color: #eee; 
+   }
+
+   .content-container {
+       padding: 15px; 
+       background-color: #fff;
    }
 
    .button {
-       width: 90%;
+       width: 100%;
        border: black solid 3px;
        max-width: 350px;
        display: flex;
@@ -67,7 +73,7 @@
    }
 
    input {
-    width: 100%;
+    width: calc(100% - 30px);
     border: black solid 0px;
     max-width: 350px;
     background-color: #F2F2F2;
@@ -78,7 +84,7 @@
 
    .left {
        align-items: flex-start;
-       width: 90%;
+       width: 100%;
        max-width: 350px;
    }
 
@@ -94,7 +100,7 @@
     text-transform: uppercase; 
     font-size: 36px; 
     padding: 0; 
-    margin: 10px 0; 
+    margin: 20px 0 0px; 
    }
    .section-heading p {
     font-size: 17px;  
