--- a/app/assets/stylesheets/lunches.scss
+++ b/app/assets/stylesheets/lunches.scss
@@ -5,12 +5,12 @@
 .event {
     border: black solid 3px;
     height: 200px;
-    width: 90%;
+    width: 100%;
     max-width: 350px;
 }
 
 .prev-container {
-    width: 90%;
+    width: 100%;
     max-width: 350px;
     .lunch {
         border: black solid 3px;
